backend-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"backend","namespace":"resilioops"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"backend"}},"template":{"metadata":{"labels":{"app":"backend"}},"spec":{"containers":[{"env":[{"name":"DB_HOST","value":"postgres"},{"name":"REDIS_HOST","value":"redis"}],"image":"resilioops-backend:2.0","name":"backend","ports":[{"containerPort":5000}]}]}}}}
  creationTimestamp: "2026-05-28T04:11:30Z"
  generation: 5
  name: backend
  namespace: resilioops
  resourceVersion: "8711"
  uid: d7013c1e-7e5d-4a8b-a86a-06c09da4feec
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-05-28T13:57:05+05:30"
      labels:
        app: backend
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: postgres
        - name: REDIS_HOST
          value: redis
        image: resilioops-backend:2.0
        imagePullPolicy: IfNotPresent
        name: backend
        ports:
        - containerPort: 5000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2026-05-28T06:56:08Z"
    lastUpdateTime: "2026-05-28T06:56:08Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2026-05-28T04:11:30Z"
    lastUpdateTime: "2026-05-28T08:40:26Z"
    message: ReplicaSet "backend-594c5bd89f" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 5
  replicas: 3
  terminatingReplicas: 0
  unavailableReplicas: 3
  updatedReplicas: 2
