backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resilioops-ingress
  namespace: resilioops
spec:
  rules:
    - host: api.resilioops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
